# ROLL

./: .gitignore  README.md  pyproject.toml  requirements_common.txt  requirements_torch260_vllm.txt
examples/config/: traj_envs.yaml
examples/qwen2.5-0.5B-agentic/: agentic_rollout_personalens.yaml  (+3 more)
roll/pipeline/agentic/env/personal_proxy/: .gitignore  __init__.py  env.py  main.py  pyproject.toml
roll/pipeline/agentic/env/personal_proxy/web_demo/: README.md  app.py  start.sh  test_embedding_retrieval.py  test_preferences.txt
roll/pipeline/agentic/env/personal_proxy/web_demo/data/: default_intent_categories.json  users.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/REXKEV214/: intent_categories.json  intent_history.json  personal_facts.json  personal_preferences.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/default/: intent_history.json  personal_facts.json  personal_preferences.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/test/: intent_history.json  personal_facts.json  personal_preferences.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/test1117/: personal_facts.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/test18/: intent_history.json
roll/pipeline/agentic/env/personal_proxy/web_demo/data/users/tukainan/: intent_history.json  personal_facts.json  personal_preferences.json
roll/pipeline/agentic/env/personal_proxy/web_demo/static/: script.js  style.css
roll/pipeline/agentic/env/personal_proxy/web_demo/templates/: index.html  login.html  register.html
(+33 files in other folders)
