[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
ignore = ["E501", "E741", "W605", "I001", "W293"]
select = ["E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["roll"]

# ============ 新增部分 ============
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roll"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["roll"]
